@@ -20,5 +20,6 @@
         <activity android:name=".ExportActivity" android:label="@string/title_export" />
         <activity android:name=".TimeLogActivity" android:label="@string/title_timelog" />
         <activity android:name=".SettingsActivity" android:label="@string/title_settings" />
+        <activity android:name=".SplitActivity" android:label="@string/title_split" />
     </application>
 </manifest>
