@@ -25,13 +25,13 @@ public final class R {
         public static final int icon_timelog=0x7f020004;
     }
     public static final class id {
-        public static final int about=0x7f0a0012;
+        public static final int about=0x7f0a0018;
         public static final int aboutText=0x7f0a0001;
         public static final int activitiesTable=0x7f0a000e;
         public static final int activities_title=0x7f0a000d;
         public static final int backButton=0x7f0a0000;
         public static final int done_button=0x7f0a000c;
-        public static final int export=0x7f0a0010;
+        public static final int export=0x7f0a0016;
         public static final int exportButton=0x7f0a0007;
         public static final int exportInvitation=0x7f0a0002;
         public static final int exportLocation=0x7f0a0009;
@@ -41,16 +41,23 @@ public final class R {
         public static final int radio0=0x7f0a0004;
         public static final int radio1=0x7f0a0005;
         public static final int radio2=0x7f0a0006;
-        public static final int settings=0x7f0a0013;
+        public static final int settings=0x7f0a0019;
+        public static final int split_button=0x7f0a0012;
+        public static final int split_first_activity=0x7f0a0010;
+        public static final int split_hint=0x7f0a0013;
+        public static final int split_message=0x7f0a000f;
+        public static final int split_second_activity=0x7f0a0011;
+        public static final int split_timer=0x7f0a0014;
         public static final int timeLabel=0x7f0a000b;
-        public static final int timeLogTable=0x7f0a000f;
-        public static final int timeLogView=0x7f0a0011;
+        public static final int timeLogTable=0x7f0a0015;
+        public static final int timeLogView=0x7f0a0017;
     }
     public static final class layout {
         public static final int about=0x7f030000;
         public static final int export=0x7f030001;
         public static final int main=0x7f030002;
-        public static final int timelog=0x7f030003;
+        public static final int split=0x7f030003;
+        public static final int timelog=0x7f030004;
     }
     public static final class menu {
         public static final int menu=0x7f090000;
@@ -63,19 +70,29 @@ public final class R {
         public static final int app_name=0x7f080000;
         public static final int backButton_text=0x7f080003;
         public static final int doneButton_text=0x7f080002;
-        public static final int export_LocationHint=0x7f08000e;
-        public static final int export_Xls=0x7f08000b;
-        public static final int export_button=0x7f08000d;
-        public static final int export_invitation=0x7f080008;
-        public static final int export_plainText=0x7f08000c;
-        public static final int export_timelog=0x7f08000a;
+        public static final int export_LocationHint=0x7f08000f;
+        public static final int export_Xls=0x7f08000c;
+        public static final int export_button=0x7f08000e;
+        public static final int export_invitation=0x7f08000a;
+        public static final int export_plainText=0x7f08000d;
+        public static final int export_timelog=0x7f08000b;
         public static final int input_hint=0x7f080004;
-        public static final int pref_export_location_default=0x7f080011;
-        public static final int pref_export_location_summary=0x7f080010;
-        public static final int pref_export_location_title=0x7f08000f;
+        public static final int pref_export_location_default=0x7f080012;
+        public static final int pref_export_location_summary=0x7f080011;
+        public static final int pref_export_location_title=0x7f080010;
+        public static final int pref_split_separator_default=0x7f080018;
+        public static final int pref_split_separator_summary=0x7f080017;
+        public static final int pref_split_separator_title=0x7f080016;
+        public static final int pref_split_switcher_default=0x7f080015;
+        public static final int pref_split_switcher_summary=0x7f080014;
+        public static final int pref_split_switcher_title=0x7f080013;
+        public static final int split_button=0x7f080019;
+        public static final int split_first_activity_time_message=0x7f08001b;
+        public static final int split_message=0x7f08001a;
         public static final int title_about=0x7f080005;
         public static final int title_export=0x7f080009;
         public static final int title_settings=0x7f080007;
+        public static final int title_split=0x7f080008;
         public static final int title_timelog=0x7f080006;
     }
     public static final class xml {
